// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileUploadDropzone renders correctly without any setup 1`] = `
<FileUploadDropzone
  clearErrors={false}
  locale={
    Object {
      "validation": Object {
        "multiple": Object {
          "fileName": "[numberOfFiles] files ([filenames]) have an invalid file name",
          "fileNameLength": "[numberOfFiles] filenames ([filenames]) are too long",
          "folder": "Invalid files ([filenames])",
          "maxFileSize": "[numberOfFiles] files ([filenames]) are too big",
          "maxFiles": "Only [maxNumberOfFiles] files are allowed to be uploaded.  Files ([filenames]) ignored",
        },
        "single": Object {
          "fileName": "Invalid file name ([filename])",
          "fileNameLength": "Filename ([filename]) is too long",
          "folder": "Invalid file ([filename])",
          "maxFileSize": "File ([filename]) is too big",
          "maxFiles": "Only [maxNumberOfFiles] files are allowed to be uploaded. File ([filename]) ignored",
        },
      },
    }
  }
  maxFiles={3}
  maxSize={1000}
  onDropped={[Function]}
  uploadedFiles={Array []}
>
  <div>
    <div
      className="columns"
      style={
        Object {
          "marginTop": "12px",
        }
      }
    >
      <div
        className="column"
        onKeyPress={[Function]}
        tabIndex="0"
      >
        <Dropzone
          disableClick={false}
          disablePreview={true}
          maxSize={1000}
          minSize={0}
          multiple={true}
          onDrop={[Function]}
          preventDropOnDocument={true}
          style={
            Object {
              "padding": "10px",
            }
          }
        >
          <div
            className=""
            onClick={[Function]}
            onDragEnter={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            style={
              Object {
                "padding": "10px",
              }
            }
          >
            <FileUploadDropzoneStaticContent>
              <div
                className="columns file-instructions"
              >
                <div
                  className="column"
                >
                  <h3>
                    File upload restrictions
                  </h3>
                  <div>
                    Please ensure your files:
                    <ul>
                      <li>
                        begin with a letter and are less than 45 characters long
                      </li>
                      <li>
                        contain only upper and lowercase alphanumeric characters, and underscores
                      </li>
                      <li>
                        have only a single period which precedes the file extension: “.pdf”
                      </li>
                      <li>
                        are uploaded individually and not inside a folder
                      </li>
                    </ul>
                  </div>
                </div>
                <div
                  className="column upload-instructions"
                >
                  <FontIcon
                    className="material-icons"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <span
                      className="material-icons"
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      style={
                        Object {
                          "color": "rgba(0, 0, 0, 0.87)",
                          "display": "inline-block",
                          "fontSize": 24,
                          "muiPrepared": true,
                          "position": "relative",
                          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                          "userSelect": "none",
                        }
                      }
                    >
                      cloud_upload
                    </span>
                  </FontIcon>
                  <p>
                    Click here to select files, or drag files into this area to upload
                  </p>
                </div>
              </div>
            </FileUploadDropzoneStaticContent>
            <input
              multiple={true}
              onChange={[Function]}
              style={
                Object {
                  "display": "none",
                }
              }
              type="file"
            />
          </div>
        </Dropzone>
      </div>
    </div>
  </div>
</FileUploadDropzone>
`;

exports[`FileUploadDropzone renders row for uploaded files 1`] = `
<FileUploadDropzone
  clearErrors={false}
  locale={
    Object {
      "validation": Object {
        "multiple": Object {
          "fileName": "[numberOfFiles] files ([filenames]) have an invalid file name",
          "fileNameLength": "[numberOfFiles] filenames ([filenames]) are too long",
          "folder": "Invalid files ([filenames])",
          "maxFileSize": "[numberOfFiles] files ([filenames]) are too big",
          "maxFiles": "Only [maxNumberOfFiles] files are allowed to be uploaded.  Files ([filenames]) ignored",
        },
        "single": Object {
          "fileName": "Invalid file name ([filename])",
          "fileNameLength": "Filename ([filename]) is too long",
          "folder": "Invalid file ([filename])",
          "maxFileSize": "File ([filename]) is too big",
          "maxFiles": "Only [maxNumberOfFiles] files are allowed to be uploaded. File ([filename]) ignored",
        },
      },
    }
  }
  maxFiles={3}
  maxSize={1000}
  onDropped={[Function]}
  uploadedFiles={Array []}
>
  <div>
    <div
      className="columns"
      style={
        Object {
          "marginTop": "12px",
        }
      }
    >
      <div
        className="column"
        onKeyPress={[Function]}
        tabIndex="0"
      >
        <Dropzone
          disableClick={false}
          disablePreview={true}
          maxSize={1000}
          minSize={0}
          multiple={true}
          onDrop={[Function]}
          preventDropOnDocument={true}
          style={
            Object {
              "padding": "10px",
            }
          }
        >
          <div
            className=""
            onClick={[Function]}
            onDragEnter={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            style={
              Object {
                "padding": "10px",
              }
            }
          >
            <FileUploadDropzoneStaticContent>
              <div
                className="columns file-instructions"
              >
                <div
                  className="column"
                >
                  <h3>
                    File upload restrictions
                  </h3>
                  <div>
                    Please ensure your files:
                    <ul>
                      <li>
                        begin with a letter and are less than 45 characters long
                      </li>
                      <li>
                        contain only upper and lowercase alphanumeric characters, and underscores
                      </li>
                      <li>
                        have only a single period which precedes the file extension: “.pdf”
                      </li>
                      <li>
                        are uploaded individually and not inside a folder
                      </li>
                    </ul>
                  </div>
                </div>
                <div
                  className="column upload-instructions"
                >
                  <FontIcon
                    className="material-icons"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <span
                      className="material-icons"
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      style={
                        Object {
                          "color": "rgba(0, 0, 0, 0.87)",
                          "display": "inline-block",
                          "fontSize": 24,
                          "muiPrepared": true,
                          "position": "relative",
                          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                          "userSelect": "none",
                        }
                      }
                    >
                      cloud_upload
                    </span>
                  </FontIcon>
                  <p>
                    Click here to select files, or drag files into this area to upload
                  </p>
                </div>
              </div>
            </FileUploadDropzoneStaticContent>
            <input
              multiple={true}
              onChange={[Function]}
              style={
                Object {
                  "display": "none",
                }
              }
              type="file"
            />
          </div>
        </Dropzone>
      </div>
    </div>
  </div>
</FileUploadDropzone>
`;

exports[`FileUploadDropzone renders row for uploaded files 2`] = `
<FileUploadDropzone
  clearErrors={false}
  locale={
    Object {
      "validation": Object {
        "multiple": Object {
          "fileName": "[numberOfFiles] files ([filenames]) have an invalid file name",
          "fileNameLength": "[numberOfFiles] filenames ([filenames]) are too long",
          "folder": "Invalid files ([filenames])",
          "maxFileSize": "[numberOfFiles] files ([filenames]) are too big",
          "maxFiles": "Only [maxNumberOfFiles] files are allowed to be uploaded.  Files ([filenames]) ignored",
        },
        "single": Object {
          "fileName": "Invalid file name ([filename])",
          "fileNameLength": "Filename ([filename]) is too long",
          "folder": "Invalid file ([filename])",
          "maxFileSize": "File ([filename]) is too big",
          "maxFiles": "Only [maxNumberOfFiles] files are allowed to be uploaded. File ([filename]) ignored",
        },
      },
    }
  }
  maxFiles={3}
  maxSize={1000}
  onDropped={[Function]}
  uploadedFiles={Array []}
>
  <div>
    <div
      className="columns"
      style={
        Object {
          "marginTop": "12px",
        }
      }
    >
      <div
        className="column"
        onKeyPress={[Function]}
        tabIndex="0"
      >
        <Dropzone
          disableClick={false}
          disablePreview={true}
          maxSize={1000}
          minSize={0}
          multiple={true}
          onDrop={[Function]}
          preventDropOnDocument={true}
          style={
            Object {
              "padding": "10px",
            }
          }
        >
          <div
            className=""
            onClick={[Function]}
            onDragEnter={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            style={
              Object {
                "padding": "10px",
              }
            }
          >
            <FileUploadDropzoneStaticContent>
              <div
                className="columns file-instructions"
              >
                <div
                  className="column"
                >
                  <h3>
                    File upload restrictions
                  </h3>
                  <div>
                    Please ensure your files:
                    <ul>
                      <li>
                        begin with a letter and are less than 45 characters long
                      </li>
                      <li>
                        contain only upper and lowercase alphanumeric characters, and underscores
                      </li>
                      <li>
                        have only a single period which precedes the file extension: “.pdf”
                      </li>
                      <li>
                        are uploaded individually and not inside a folder
                      </li>
                    </ul>
                  </div>
                </div>
                <div
                  className="column upload-instructions"
                >
                  <FontIcon
                    className="material-icons"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <span
                      className="material-icons"
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      style={
                        Object {
                          "color": "rgba(0, 0, 0, 0.87)",
                          "display": "inline-block",
                          "fontSize": 24,
                          "muiPrepared": true,
                          "position": "relative",
                          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                          "userSelect": "none",
                        }
                      }
                    >
                      cloud_upload
                    </span>
                  </FontIcon>
                  <p>
                    Click here to select files, or drag files into this area to upload
                  </p>
                </div>
              </div>
            </FileUploadDropzoneStaticContent>
            <input
              multiple={true}
              onChange={[Function]}
              style={
                Object {
                  "display": "none",
                }
              }
              type="file"
            />
          </div>
        </Dropzone>
      </div>
    </div>
    <Alert
      message="File (b.txt) is too big; Invalid file (folder); Filename (jalksjflkajsdlkfjasdlkfjalsdfjlkasdjflkajsdfkljasdlfjasljfsajlkdsjflkasdjflkjasdflkj.txt) is too long; Invalid file name (a.text.txt)"
      title="Upload errors"
      type="error"
    >
      <div
        className=""
      >
        <div
          className="error alertWrapper"
        >
          <div
            className="columns is-gapless is-multiline"
          >
            <div
              className="column is-narrow alertIcon"
            >
              <FontIcon
                className="material-icons"
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <span
                  className="material-icons"
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                      "display": "inline-block",
                      "fontSize": 24,
                      "muiPrepared": true,
                      "position": "relative",
                      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      "userSelect": "none",
                    }
                  }
                >
                  error
                </span>
              </FontIcon>
            </div>
            <div
              className="column alertText"
            >
              <span
                className="alertTitle"
              >
                Upload errors
                 - 
              </span>
              File (b.txt) is too big; Invalid file (folder); Filename (jalksjflkajsdlkfjasdlkfjalsdfjlkasdjflkajsdfkljasdlfjasljfsajlkdsjflkasdjflkjasdflkj.txt) is too long; Invalid file name (a.text.txt)
            </div>
          </div>
        </div>
      </div>
    </Alert>
  </div>
</FileUploadDropzone>
`;

exports[`FileUploadDropzone renders row for uploaded files 3`] = `
<FileUploadDropzone
  clearErrors={false}
  locale={
    Object {
      "validation": Object {
        "multiple": Object {
          "fileName": "[numberOfFiles] files ([filenames]) have an invalid file name",
          "fileNameLength": "[numberOfFiles] filenames ([filenames]) are too long",
          "folder": "Invalid files ([filenames])",
          "maxFileSize": "[numberOfFiles] files ([filenames]) are too big",
          "maxFiles": "Only [maxNumberOfFiles] files are allowed to be uploaded.  Files ([filenames]) ignored",
        },
        "single": Object {
          "fileName": "Invalid file name ([filename])",
          "fileNameLength": "Filename ([filename]) is too long",
          "folder": "Invalid file ([filename])",
          "maxFileSize": "File ([filename]) is too big",
          "maxFiles": "Only [maxNumberOfFiles] files are allowed to be uploaded. File ([filename]) ignored",
        },
      },
    }
  }
  maxFiles={3}
  maxSize={1000}
  onDropped={[Function]}
  uploadedFiles={Array []}
>
  <div>
    <div
      className="columns"
      style={
        Object {
          "marginTop": "12px",
        }
      }
    >
      <div
        className="column"
        onKeyPress={[Function]}
        tabIndex="0"
      >
        <Dropzone
          disableClick={false}
          disablePreview={true}
          maxSize={1000}
          minSize={0}
          multiple={true}
          onDrop={[Function]}
          preventDropOnDocument={true}
          style={
            Object {
              "padding": "10px",
            }
          }
        >
          <div
            className=""
            onClick={[Function]}
            onDragEnter={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            style={
              Object {
                "padding": "10px",
              }
            }
          >
            <FileUploadDropzoneStaticContent>
              <div
                className="columns file-instructions"
              >
                <div
                  className="column"
                >
                  <h3>
                    File upload restrictions
                  </h3>
                  <div>
                    Please ensure your files:
                    <ul>
                      <li>
                        begin with a letter and are less than 45 characters long
                      </li>
                      <li>
                        contain only upper and lowercase alphanumeric characters, and underscores
                      </li>
                      <li>
                        have only a single period which precedes the file extension: “.pdf”
                      </li>
                      <li>
                        are uploaded individually and not inside a folder
                      </li>
                    </ul>
                  </div>
                </div>
                <div
                  className="column upload-instructions"
                >
                  <FontIcon
                    className="material-icons"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <span
                      className="material-icons"
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      style={
                        Object {
                          "color": "rgba(0, 0, 0, 0.87)",
                          "display": "inline-block",
                          "fontSize": 24,
                          "muiPrepared": true,
                          "position": "relative",
                          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                          "userSelect": "none",
                        }
                      }
                    >
                      cloud_upload
                    </span>
                  </FontIcon>
                  <p>
                    Click here to select files, or drag files into this area to upload
                  </p>
                </div>
              </div>
            </FileUploadDropzoneStaticContent>
            <input
              multiple={true}
              onChange={[Function]}
              style={
                Object {
                  "display": "none",
                }
              }
              type="file"
            />
          </div>
        </Dropzone>
      </div>
    </div>
    <Alert
      message="Only 3 files are allowed to be uploaded. File (d.txt) ignored"
      title="Upload errors"
      type="error"
    >
      <div
        className=""
      >
        <div
          className="error alertWrapper"
        >
          <div
            className="columns is-gapless is-multiline"
          >
            <div
              className="column is-narrow alertIcon"
            >
              <FontIcon
                className="material-icons"
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <span
                  className="material-icons"
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                      "display": "inline-block",
                      "fontSize": 24,
                      "muiPrepared": true,
                      "position": "relative",
                      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      "userSelect": "none",
                    }
                  }
                >
                  error
                </span>
              </FontIcon>
            </div>
            <div
              className="column alertText"
            >
              <span
                className="alertTitle"
              >
                Upload errors
                 - 
              </span>
              Only 3 files are allowed to be uploaded. File (d.txt) ignored
            </div>
          </div>
        </div>
      </div>
    </Alert>
  </div>
</FileUploadDropzone>
`;

exports[`FileUploadDropzone renders row for uploaded files 4`] = `
<FileUploadDropzone
  clearErrors={false}
  locale={
    Object {
      "validation": Object {
        "multiple": Object {
          "fileName": "[numberOfFiles] files ([filenames]) have an invalid file name",
          "fileNameLength": "[numberOfFiles] filenames ([filenames]) are too long",
          "folder": "Invalid files ([filenames])",
          "maxFileSize": "[numberOfFiles] files ([filenames]) are too big",
          "maxFiles": "Only [maxNumberOfFiles] files are allowed to be uploaded.  Files ([filenames]) ignored",
        },
        "single": Object {
          "fileName": "Invalid file name ([filename])",
          "fileNameLength": "Filename ([filename]) is too long",
          "folder": "Invalid file ([filename])",
          "maxFileSize": "File ([filename]) is too big",
          "maxFiles": "Only [maxNumberOfFiles] files are allowed to be uploaded. File ([filename]) ignored",
        },
      },
    }
  }
  maxFiles={3}
  maxSize={1000}
  onDropped={[Function]}
  uploadedFiles={Array []}
>
  <div>
    <div
      className="columns"
      style={
        Object {
          "marginTop": "12px",
        }
      }
    >
      <div
        className="column"
        onKeyPress={[Function]}
        tabIndex="0"
      >
        <Dropzone
          disableClick={false}
          disablePreview={true}
          maxSize={1000}
          minSize={0}
          multiple={true}
          onDrop={[Function]}
          preventDropOnDocument={true}
          style={
            Object {
              "padding": "10px",
            }
          }
        >
          <div
            className=""
            onClick={[Function]}
            onDragEnter={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            style={
              Object {
                "padding": "10px",
              }
            }
          >
            <FileUploadDropzoneStaticContent>
              <div
                className="columns file-instructions"
              >
                <div
                  className="column"
                >
                  <h3>
                    File upload restrictions
                  </h3>
                  <div>
                    Please ensure your files:
                    <ul>
                      <li>
                        begin with a letter and are less than 45 characters long
                      </li>
                      <li>
                        contain only upper and lowercase alphanumeric characters, and underscores
                      </li>
                      <li>
                        have only a single period which precedes the file extension: “.pdf”
                      </li>
                      <li>
                        are uploaded individually and not inside a folder
                      </li>
                    </ul>
                  </div>
                </div>
                <div
                  className="column upload-instructions"
                >
                  <FontIcon
                    className="material-icons"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <span
                      className="material-icons"
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      style={
                        Object {
                          "color": "rgba(0, 0, 0, 0.87)",
                          "display": "inline-block",
                          "fontSize": 24,
                          "muiPrepared": true,
                          "position": "relative",
                          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                          "userSelect": "none",
                        }
                      }
                    >
                      cloud_upload
                    </span>
                  </FontIcon>
                  <p>
                    Click here to select files, or drag files into this area to upload
                  </p>
                </div>
              </div>
            </FileUploadDropzoneStaticContent>
            <input
              multiple={true}
              onChange={[Function]}
              style={
                Object {
                  "display": "none",
                }
              }
              type="file"
            />
          </div>
        </Dropzone>
      </div>
    </div>
    <Alert
      message="Only 3 files are allowed to be uploaded. File (d.txt) ignored"
      title="Upload errors"
      type="error"
    >
      <div
        className=""
      >
        <div
          className="error alertWrapper"
        >
          <div
            className="columns is-gapless is-multiline"
          >
            <div
              className="column is-narrow alertIcon"
            >
              <FontIcon
                className="material-icons"
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <span
                  className="material-icons"
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                      "display": "inline-block",
                      "fontSize": 24,
                      "muiPrepared": true,
                      "position": "relative",
                      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      "userSelect": "none",
                    }
                  }
                >
                  error
                </span>
              </FontIcon>
            </div>
            <div
              className="column alertText"
            >
              <span
                className="alertTitle"
              >
                Upload errors
                 - 
              </span>
              Only 3 files are allowed to be uploaded. File (d.txt) ignored
            </div>
          </div>
        </div>
      </div>
    </Alert>
  </div>
</FileUploadDropzone>
`;
